# slurmpilot

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: run-pytest.yml
config/: general.yaml
config/clusters/: cluster_example.yaml
example/hellocluster/: hellocluster_script.sh  launch_hellocluster.py  launch_hellocluster_local.py  launch_hellocluster_mock.py  launch_hellocluster_remote.py  launch_program.py
example/python_dependencies/: README.md  job.yaml  launch_python_dependencies.py
example/python_dependencies/custom_library/: speed_of_light.py
example/python_dependencies/script/: main_using_custom_library.py
examples/: scratch.py
examples/hellocluster/: launch_hellocluster.py  launch_hellocluster_locally.py
examples/hellocluster-python/: launch_hellocluster_python.py  main_hello_cluster.py
examples/hellocluster-python-array/: launch_array.py  launch_hellocluster_python.py  main_hello_cluster.py
examples/hellocluster-yaml/: config.yaml  hellocluster_script_template.sh  launch.py  launch_hellocluster.py
examples/python_dependencies/: launch.py  launch_python_dependencies.py
examples/python_dependencies/script/: launch.py  main.sh  script_using_custom_library.py
notes/: TODOs.md  cli.md  features.md  install_cluster.md  list_of_jobs.md  local_mode.md  python_support.md  running_locally.md  skypilot.md  subfolder.md
slurmpilot/: __init__.py  add_cluster.py  cli.py  config.py  job_creation_info.py  job_metadata.py  job_path.py  jobpath.py  mock_slurm.py  remote_command.py  slurm_job_status.py  slurm_main_script.py  slurm_script.py  slurm_wrapper.py  slurmpilot.py  slurmpilot_logging.py  sp.py  util.py
slurmpilot/callback/: __init__.py  callback.py
slurmpilot/cli/: add_cluster.py  cli.py  usage.py
tst/: test_cli.py  test_config.py  test_generate_sbatch_script.py  test_job_creation_info.py  test_jobmetadata.py  test_mock_slurm.py  test_path_logic.py  test_remote_command.py  test_slurm_wrapper.py  test_slurmpilot.py  test_slurmpilot_clusters.py
tst/script/: launch.sh
