[project]
name = "slurmpilot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "david.salinas.pro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tst"]
pythonpath = ["slurmpilot"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "slurmpilot"}
py-modules = [
    "remote_command",
    "mock_slurm",
    "config",
    "job_creation_info",
    "job_path",
    "job_metadata",
    "slurm_script",
    "slurmpilot",
    "slurmpilot_logging",
    "cli",
    "util",
]

[project.scripts]
sp = "cli:main"

[tool.ruff]
src = ["slurmpilot", "tst"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
