[project]
name = "slurmpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "david.salinas.pro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "coolname>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tst"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slurmpilot*"]

[project.scripts]
sp = "slurmpilot.cli:main"

[tool.ruff]
src = ["slurmpilot", "tst"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
